# safe-rpc-api

./: .travis.yml  CMakeLists.txt  README.md
cmake/: FindJSONCPP.cmake  FindSQLITE3.cmake
nodejs/: deploy.js  geth_ropsten_ws.sh  package.json  rpc.js  safe.abi  safe.addr  safe.js  safe.sol  send.js  web3.js
src/bitcoinapi/: CMakeLists.txt  bitcoinapi.cpp  bitcoinapi.h  safe_types.h  safeapi.cpp  safeapi.h
src/projects/: CMakeLists.txt  CMakeLists.txt.alone  mysqlite.cpp  mysqlite.h  safe2eth.cpp  safenode.cpp
src/test/: CMakeLists.txt  main.cpp
